objects/DC_Max_Users_or_Attorneys__mdt.object
<CustomObject>
    <fields>
        <fullName>Max_No_Of_Attorneys__c</fullName>
        <label>Max No Of Attorneys</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_No_Of_Per_Seat_Users__c</fullName>
        <label>Max No Of Per Seat Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>DC Max Users or Attorneys</label>
    <pluralLabel>DC Max Users or Attorneys</pluralLabel>
</CustomObject>